--- a/dev-config.yml
+++ b/dev-config.yml
@@ -1,6 +1,38 @@
+server:
+  rootPath: /api/*
+  applicationContextPath: /
+
+assets:
+  mappings:
+    /assets: /assets
+    /js: /assets/js
+
 logging:
   level: INFO
 
 http:
    port: 7400
    adminPort: 7404
+
+database:
+  # the name of your JDBC driver
+  driverClass: org.postgresql.Driver
+  # the username
+  user: eanrapidcontent
+   # the password
+  password: eanrapidcontent
+   # the JDBC URL
+  url: jdbc:postgresql://localhost:5432/eanrapidcontent
+   # any properties specific to your JDBC driver:
+  properties:
+    charSet: UTF-8
+  # the maximum amount of time to wait on an empty pool before throwing an exception
+  maxWaitForConnection: 1s
+  # the SQL query to run when validating a connection's liveness
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  # the minimum number of connections to keep open
+  minSize: 8
+  # the maximum number of connections to keep open
+  maxSize: 32
+  # whether or not idle connections should be validated
+  checkConnectionWhileIdle: false
